@@ -1,0 +1,13 @@
+EXPLAIN SELECT
+  sum('a'),
+  avg('a'),
+  variance('a'),
+  std('a')
+FROM src;
+
+SELECT
+  sum('a'),
+  avg('a'),
+  variance('a'),
+  std('a')
+FROM src;
